# flipr

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  README.md
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/lp/: page.tsx
app/src/components/: BetPanel.tsx  BettingGrid.tsx  PriceDisplay.tsx  WalletButton.tsx  WalletProvider.tsx  index.ts
app/src/components/grid/: BetModal.tsx  BettingGrid.tsx  Confetti.tsx  GridCell.tsx  PriceLine.tsx  PriceRow.tsx  index.ts
app/src/hooks/: index.ts  useProgram.ts  usePythPrice.ts
app/src/lib/: constants.ts  program.ts
app/src/store/: betStore.ts
programs/flipr/: Cargo.toml
programs/flipr/src/: constants.rs  error.rs  lib.rs
programs/flipr/src/instructions/: mod.rs
programs/flipr/src/state/: bet.rs  config.rs  mod.rs  vault.rs
tests/: flipr_temp.ts
